--- a/src/stockcontrol/Interfaz2.form
+++ b/src/stockcontrol/Interfaz2.form
@@ -126,7 +126,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Stock Control 1.2 BETA"/>
+    <Property name="title" type="java.lang.String" value="Stock Control 1.2 FINAL"/>
     <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
       <Color blue="ff" green="ff" red="ff" type="rgb"/>
     </Property>
